--- a/tasks/setup.yml
+++ b/tasks/setup.yml
@@ -14,6 +14,9 @@
   run_once: true
   when: ocstore_backup_base_name is not defined
 
+- name: ocStore | Backup | Ensure local backup dir presents
+  local_action: file state="directory" path="{{ ocstore_backup_dir }}"
+
 - name: ocStore | Backup | Create temporary directory
   tempfile:
     path: "{{ ocstore_backup_to }}"
