--- a/tasks/archive.yml
+++ b/tasks/archive.yml
@@ -3,6 +3,7 @@
 
 - name: ocStore | Backup | Create archive
   shell: "cd {{ tmp_dir.path }}; tar -cjf {{ ocstore_backup_arch_name }} *; chmod 600 {{ ocstore_backup_arch_name }}"
+  become: yes
 
 - name: ocStore | Backup | Download archive
   synchronize:
@@ -11,3 +12,4 @@
     mode: "pull"
     src: "{{ ocstore_backup_arch_name }}"
     dest: "{{ ocstore_backup_dir }}/{{ ocstore_backup_prefix }}{{ ocstore_backup_base_name }}.tar.bz2"
+  become: yes
