--- a/tasks/databases.yml
+++ b/tasks/databases.yml
@@ -7,4 +7,5 @@
     name: "{{ item.name }}"
     target: "{{ item.path }}"
   with_items: "{{ ocstore_backup_dump_names }}"
+  changed_when: false
   become: yes
